ready view, profile
Change-Id: I0f0cdb0b0194b6a0beed2f9941307786d25cf065

--- a/JSFProject/WebContent/resources/css/mainStyle.css
+++ b/JSFProject/WebContent/resources/css/mainStyle.css
@@ -123,4 +123,22 @@ th{
 	text-decoration: none;
 }
 
+#popupWindow_container div{
+	font-family: "Tahoma";
+	font-size: 15px;
+}
+
+#popupWindow_content #imageProfile{
+	float: left;
+	margin-right: 20px;
+}
+
+#popupWindow_content form{
+	float: left;
+}
+
+.bold{
+	font-weight: bold;
+}
+
 
